RESOLVED FIXED44465
[GTK] The 64-bit Release bot is showing crashes on tests that use mouse buttons
https://bugs.webkit.org/show_bug.cgi?id=44465
Summary [GTK] The 64-bit Release bot is showing crashes on tests that use mouse buttons
Martin Robinson
Reported 2010-08-23 16:25:50 PDT
In this case the crashes appear to be due to the uninitialized axes field in the event structure.
Attachments
Patch for this issue (2.08 KB, patch)
2010-08-23 16:27 PDT, Martin Robinson
gustavo: review+
Martin Robinson
Comment 1 2010-08-23 16:27:45 PDT
Created attachment 65176 [details] Patch for this issue
Gustavo Noronha (kov)
Comment 2 2010-08-23 16:28:59 PDT
Comment on attachment 65176 [details] Patch for this issue Thanks!
Martin Robinson
Comment 3 2010-08-23 16:32:26 PDT
Note You need to log in before you can comment on or make changes to this bug.