WebKitTools/DumpRenderTree/gtk/EventSender.cpp
@@ -164,6 +164,7 @@ bool prepareMouseButtonEvent(GdkEvent* event, int eventSenderButtonNumber)
     event->button.device = gdk_device_get_core_pointer();
     event->button.state = getStateFlags();
     event->button.time = GDK_CURRENT_TIME;
+    event->button.axes = 0;
 
     int xRoot, yRoot;
     gdk_window_get_root_coords(gtk_widget_get_window(GTK_WIDGET(view)), lastMousePositionX, lastMousePositionY, &xRoot, &yRoot);
@@ -290,6 +291,7 @@ static JSValueRef mouseMoveToCallback(JSContextRef context, JSObjectRef function
     event.motion.window = gtk_widget_get_window(GTK_WIDGET(view));
     event.motion.device = gdk_device_get_core_pointer();
     event.motion.state = getStateFlags();
+    event.motion.axes = 0;
 
     int xRoot, yRoot;
     gdk_window_get_root_coords(gtk_widget_get_window(GTK_WIDGET(view)), lastMousePositionX, lastMousePositionY, &xRoot, &yRoot);
